Archive2/43/7ca6598d23f8d7/output
main.cpp:1:4: error: stray '#' in program
 sdf#include <iostream>
    ^
main.cpp:1:1: error: 'sdf' does not name a type
 sdf#include <iostream>
 ^
main.cpp: In function 'int main()':
main.cpp:15:9: error: 'cout' is not a member of 'std'
         std::cout << '"' << buf << '"' << '\n';
         ^
